--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,5 @@
 {
-  "presets": [["es2015", {"modules": false}]],
-
+  "presets": [["es2015", {"modules": false}],"react"],
   "env": {
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
