--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "shiny <985324428@qq.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode development",
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js ",
     "test": "jest"
   },
   "dependencies": {
@@ -23,7 +23,8 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
     "babel-jest": "^22.4.3",
