--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "babel-preset-react": "^6.24.1",
     "cooking-cli": "1.1.4",
     "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "style-loader": "^0.21.0",
