--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "cooking-cli": "1.1.4",
+    "postcss-loader": "^2.1.5",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  },
+  "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "cooking-cli": "1.1.4",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.4.3",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "regenerator-runtime": "^0.11.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
-  },
-  "devDependencies": {
-    "babel-jest": "^22.4.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.4.3",
-    "regenerator-runtime": "^0.11.1"
   }
 }
